--- a/.github/workflows/update-leaderboard.yml
+++ b/.github/workflows/update-leaderboard.yml
@@ -1,7 +1,7 @@
 name: Update Leaderboard
 on:
   schedule:
-    - cron: '0 */4 * * *'  # Run every 4 hours
+    - cron: "*/30 * * * *"
   workflow_dispatch:        # Allow manual triggers
 
 jobs:
